crates/llvmkit-ir/tests/compile_fail/position_at_end_terminated_block.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/position_at_end_terminated_block.rs:22:62
   |
22 |         let _ = IRBuilder::new_for::<()>(&m).position_at_end(terminated_bb);
   |                                              --------------- ^^^^^^^^^^^^^ expected `BasicBlock<'_, ()>`, found `BasicBlock<'_, (), Terminated>`
   |                                              |
   |                                              arguments to this method are incorrect
   |
   = note: expected struct `llvmkit_ir::BasicBlock<'_, (), Unterminated, Brand<'_>, BlockParamsDyn>`
              found struct `llvmkit_ir::BasicBlock<'_, (), Terminated, Brand<'_>, BlockParamsDyn>`
note: method defined here
  --> src/ir_builder.rs
   |
   |     pub fn position_at_end(
   |            ^^^^^^^^^^^^^^^
